--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../Android/packages.config" />
+  <repository path="../DialAtOnce.iOS/packages.config" />
+  <repository path="../DialAtOnce.PCL/packages.config" />
   <repository path="../iOS/packages.config" />
   <repository path="../Xamarin3United.PCL/packages.config" />
 </repositories>
